styles/tailwind.css
@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";

:root {
    --ff-primary: "Ysabeau Infant", sans-serif;
    --ff-secondary: "Ubuntu", sans-serif;
    --color-bronze: #bb752e;
}

html,
body {
    line-height: 1.4;
    font-size: 1.1rem;
    scroll-behavior: smooth;
    font-family: var(--ff-secondary);
}

.font-primary {
    font-family: var(--ff-primary);
}

.contributor-images {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 10px;
}

.contributor-images img {
    border-radius: 50%;
    object-fit: cover;
}

.spinner {
    border: 4px solid rgba(0, 0, 0, 0.1);
    width: 36px;
    height: 36px;
    border-radius: 50%;
    border-top-color: #7362ff;
    animation: spin 1s ease-in-out infinite;
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

